# dancing-links

./: Cargo.toml  bases.txt  rustfmt.toml
benches/: dance.rs
dlx/: Cargo.toml
dlx/examples/: pent-3x20.rs  pent-6x10.rs  ratemysudoku.rs
dlx/examples/common/: polyomino.rs
dlx/src/: c.rs  lib.rs  mc.rs  p.rs  x.rs
dlx_omino/: Cargo.toml
dlx_omino/examples/: #pent-3x20.rs#  hex-triangle.rs  pent-3x20.rs  pent-5x11.rs
dlx_omino/src/: lib.rs
examples/: iteratemysudoku.rs  pent-3x20.rs  pent-6x10.rs  ratemysudoku.rs
examples/common/: polyomino.rs  sudoku.rs
src/: c.rs  choose.rs  lib.rs  m.rs  mc.rs  p.rs  x.rs
