[package]
name = "dlx_omino"
version = "0.2.0"
description = """
Utilities for generating polyomino problems for dlx
"""

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
dlx = { path = "../dlx", version = "0.8.0" }
